Contact card added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
 
-                  <!-- link in bootstrap stylesheet -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+      <!-- link in bootstrap stylesheet -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </head>
 
   <body>
@@ -28,7 +28,7 @@
       <!-- End Nav-bar -->
 
       <!-- Begin a container -->
-      <div class="container ml-5 mt-5">
+      <div class="container ml-5 mt-5" style="max-width: 740px;">
                     <!-- Profile picture -->
           <div class="card mb-3" style="max-width: 740px;">
               <div class="row no-gutters">
@@ -47,10 +47,8 @@
                 </div>
                 <!-- End About me  -->
               </div>
-            </div>
+        </div>
       </div>
-      <!-- End container -->
-
-      
+      <!-- End container --> 
   </body>
 </html>
