--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,14 @@
 
       <!-- Begin Contact form  -->
         <div class="container ml-5 mt-5">
-            <div class="card " style="max-width: 750px; height: 400px;">
+            <div class="card pl-4 pt-3" style="max-width: 750px; height: 500px;">
                 <h1>Contact</h1>
                 <br><br>
                 <form>
                     <!-- Name -->
                     <div class="form-group row">
                       <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Name</label>
-                      <div class="col-sm-10" style="max-width: 450px;">
+                      <div class="col-sm-10" style="max-width: 500px;">
                         <input class="form-control form-control-lg" id="colFormLabelLg" placeholder="Enter Your Name">
                       </div>
                     </div>
@@ -43,7 +43,7 @@
                     <!-- Email -->
                     <div class="form-group row">
                       <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
-                      <div class="col-sm-10" style="max-width: 450px;">
+                      <div class="col-sm-10" style="max-width: 500px;">
                         <input class="form-control form-control-lg" id="colFormLabelLg" placeholder="Enter Your Email">
                       </div>
                     </div>
@@ -51,9 +51,14 @@
                     <!-- Message -->
                     <div class="form-group row" >
                       <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Message</label>
-                      <div class="col-sm-10" style="max-width: 450px;">
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter Your Message"></textarea>
+                      <div class="col-sm-10" style="max-width: 500px;">
+                        <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3" placeholder="Enter Your Message"></textarea>
                       </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center">
+                            <button type="button" class="btn btn-outline-primary">Submit</button>
+                        </div>
                     </div>
                   </form>
             </div>
