started portfolio with navbar and container

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- End Nav-bar -->
 
       <!-- Begin a container -->
-      <div class="container ml-5 mt-5" style="max-width: 740px;">
+      <div class="container ml-5 mt-5">
                     <!-- Profile picture -->
           <div class="card mb-3" style="max-width: 740px;">
               <div class="row no-gutters">
