--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,39 @@
 
     <!-- Begin Contact form  -->
     <div class="container ml-5 mt-5">
-        <div class="card pl-4 pt-3" style="max-width: 750px; height: 500px;">
+        <div class="card pl-4 pt-3" style="max-width: 800px;">
             <h1>Portfolio</h1>
             <br><br>
+            <!-- Row 1 -->
+            <div class="row my-2 align-items-center">
+                <div class="col-6">
+                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                </div>
+
+                <div class="col-6">
+                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                </div>
+            </div>
+
+            <!-- Row 2 -->
+            <div class="row my-2 align-items-center">
+                <div class="col-6">
+                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                </div>
+
+                <div class="col-6">
+                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                </div>
+            </div>
+
+            <!-- Row 3 -->
+            <div class="row my-2 align-items-center">
+                <div class="col-6">
+                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                </div>
+            </div>
         </div>
+
     </div>
 
 </body>
