finalized image positioning/aligning

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <body>
 
       <!-- Begin Nav-bar -->
-      <nav class="navbar navbar-expand-lg navbar-light ml-5 bg-light">
-          <a class="navbar-brand" >Mostafa Alshammary</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand ml-3" href="index.html">Mostafa Alshammary</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#">Contact</a>
-              <a class="nav-link" href="#">Portfolio</a>
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-link" href="">About</a>
             </div>
           </div>
       </nav>
