--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
 
 <body>
   <!-- Begin Nav-bar -->
-  <nav class="navbar navbar-expand-lg navbar-light ml-5 bg-light">
-    <a class="navbar-brand">Mostafa Alshammary</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand ml-3">Mostafa Alshammary</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
