--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,15 @@
 
 <body>
     <!-- Begin Nav-bar -->
-    <nav class="navbar navbar-expand-lg navbar-light ml-5 bg-light">
-        <a class="navbar-brand">Mostafa Alshammary</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand ml-3">Mostafa Alshammary</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
                 <a class="nav-link" href="#">Portfolio</a>
                 <a class="nav-link" href="#">About</a>
             </div>
@@ -27,40 +27,37 @@
     <!-- End Nav-bar -->
 
     <!-- Begin Contact form  -->
-    <div class="container ml-5 mt-5">
-        <div class="card pl-4 pt-3" style="max-width: 800px;">
+    <div class="card ml-4 pt-3 pl-3" style="max-width: 800px;">
             <h1>Portfolio</h1>
             <br><br>
             <!-- Row 1 -->
-            <div class="row my-2 align-items-center">
-                <div class="col-6">
-                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+            <div class="row">
+                <div class="col-md">
+                    <img src="http://placekitten.com/g/350/350" alt="1-1" class="mb-2 rounded">
                 </div>
 
-                <div class="col-6">
-                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                <div class="col-md">
+                    <img src="http://placekitten.com/g/350/350" alt="1-2" class="rounded">
                 </div>
             </div>
 
             <!-- Row 2 -->
-            <div class="row my-2 align-items-center">
-                <div class="col-6">
-                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+            <div class="row my-2">
+                <div class="col-md">
+                    <img src="http://placekitten.com/g/350/350" alt="2-1" class="mb-2 rounded">
                 </div>
 
-                <div class="col-6">
-                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+                <div class="col-md">
+                    <img src="http://placekitten.com/g/350/350" alt="2-2" class="rounded">
                 </div>
             </div>
 
             <!-- Row 3 -->
-            <div class="row my-2 align-items-center">
-                <div class="col-6">
-                    <img src="http://placekitten.com/g/350/350" alt="..." class="rounded">
+            <div class="row">
+                <div class="col-md">
+                    <img src="http://placekitten.com/g/350/350" alt="3-1" class="mb-2 rounded">
                 </div>
             </div>
-        </div>
-
     </div>
 
 </body>
