added random profile picture

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="contact.html">Contact</a>
               <a class="nav-link" href="portfolio.html">Portfolio</a>
-              <a class="nav-link" href="">About</a>
+              <a class="nav-link" href="index.html">About</a>
             </div>
           </div>
       </nav>
@@ -30,19 +30,17 @@
       <!-- Begin a container -->
       <div class="container ml-5 mt-5">
                     <!-- Profile picture -->
-          <div class="card mb-3" style="max-width: 740px;">
+          <div class="card mb-3" style="height: 400px;">
               <div class="row no-gutters">
                 <div class="col-md-4">
-                  <img src="..." class="card-img" alt="Profile picture">
+                  <img src="http://placeimg.com/350/500/any" class="card-img" alt="Profile picture">
                 </div>
 
                 <div class="col-md-8">
                     <!-- Begin About me -->
                   <div class="card-body">
                     <h5 class="card-title">About Me</h5>
-                    <p class="card-text">Hello my name is...</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam pariatur facere odio itaque laboriosam labore qui debitis perspiciatis laudantium, quod culpa nisi dignissimos accusamus delectus veritatis velit aspernatur nihil nemo!</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam pariatur facere odio itaque laboriosam labore qui debitis perspiciatis laudantium, quod culpa nisi dignissimos accusamus delectus veritatis velit aspernatur nihil nemo!</p>
+                    <p class="card-text">My name is Mostafa Alshammary, and I'm a future full-stack web developer!</p>
                   </div>
                 </div>
                 <!-- End About me  -->
