--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <div class="navbar-nav">
         <a class="nav-link" href="contact.html">Contact</a>
         <a class="nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="index.html">About</a>
       </div>
     </div>
   </nav>
