--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="contact.html">Contact</a>
                 <a class="nav-link" href="portfolio.html">Portfolio</a>
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="index.html">About</a>
             </div>
         </div>
     </nav>
