--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
       <!-- Begin a container -->
       <div class="container ml-5 mt-5">
                     <!-- Profile picture -->
-          <div class="card mb-3" style="height: 400px;">
-              <div class="row no-gutters">
+        <div class="card mb-3" style="max-width: 700px; height: 700px;">
+              <div class="row" >
                 <div class="col-md-4">
-                  <img src="http://placeimg.com/350/500/any" class="card-img" alt="Profile picture">
+                  <img src="http://placeimg.com/250/250/any" class="card-img" style="max-width: 250px">
                 </div>
 
                 <div class="col-md-8">
                     <!-- Begin About me -->
-                  <div class="card-body">
-                    <h5 class="card-title">About Me</h5>
-                    <p class="card-text">My name is Mostafa Alshammary, and I'm a future full-stack web developer!</p>
-                  </div>
+                    <h3>About Me</h3>
+                    <br><br>
+                    <p>My name is Mostafa Alshammary, and I'm a future full-stack web developer!</p>
+                    <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the field of web development and the tech industry.</p>
                 </div>
                 <!-- End About me  -->
               </div>
