--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,8 @@
     <!-- End Nav-bar -->
 
     <!-- Begin Contact form  -->
-    <div class="card ml-4 pt-3 pl-3" style="max-width: 800px;">
+    <div class="container ml-4 mt-5">
+        <div class="card pl-4 pt-3" style="max-width: 800px;">
             <h1>Portfolio</h1>
             <br><br>
             <!-- Row 1 -->
@@ -58,6 +59,7 @@
                     <img src="http://placekitten.com/g/350/350" alt="3-1" class="mb-2 rounded">
                 </div>
             </div>
+        </div>
     </div>
 
 </body>
