--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Begin Nav-bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand ml-3" href="index.html">Mostafa Alshammary</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,8 +30,8 @@
 
   <!-- Begin Contact form  -->
   <div class="container ml-4 mt-5">
-    <div class="card pl-4 pt-3" style="max-width: 750px; height: 500px;">
-      <h1>Contact</h1>
+    <div class="card pl-4 pt-3 bg-light" style="max-width: 750px; height: 500px;">
+      <h3>Contact</h3>
       <br><br>
       <form>
         <!-- Name -->
