--- a/index.html
+++ b/index.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
 
-      <!-- link in bootstrap stylesheet -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 
-  <body>
+  <!-- link in bootstrap stylesheet -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
 
-      <!-- Begin Nav-bar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand ml-3" href="index.html">Mostafa Alshammary</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="contact.html">Contact</a>
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-              <a class="nav-link" href="index.html">About</a>
-            </div>
-          </div>
-      </nav>
-      <!-- End Nav-bar -->
+<body>
 
-      <!-- Begin a container -->
-      <div class="container ml-5 mt-5">
-                    <!-- Profile picture -->
-        <div class="card mb-3" style="max-width: 700px; height: 700px;">
-              <div class="row" >
-                <div class="col-md-4">
-                  <img src="http://placeimg.com/250/250/any" class="card-img" style="max-width: 250px">
-                </div>
+  <!-- Begin Nav-bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <a class="navbar-brand ml-3" href="index.html">Mostafa Alshammary</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link" href="index.html">About</a>
+      </div>
+    </div>
+  </nav>
+  <!-- End Nav-bar -->
 
-                <div class="col-md-8">
-                    <!-- Begin About me -->
-                    <h3>About Me</h3>
-                    <br><br>
-                    <p>My name is Mostafa Alshammary, and I'm a future full-stack web developer!</p>
-                    <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the field of web development and the tech industry.</p>
-                </div>
-                <!-- End About me  -->
-              </div>
+  <!-- Begin Container -->
+  <div class="container ml-4 mt-5">
+    <div class="card bg-light" style="float:left; width:600px;">
+      <!-- Begin About me -->
+      <div class="row my-2 ml-3">
+        <h3>About Me</h3>
+      </div>
+      <div class="row ml-1 my-3">
+        <div class="col-md-6">
+          <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" class="card-img" style="max-width: 350px">
+        </div>
+
+        <div class="col-md-6 pr-4">
+          <p>My name is Mostafa Alshammary, and I'm a future full-stack web developer!</p>
+          <p>I first became interested in coding when I was in college. A couple of the pre-requesites I had to take for
+            my Mechanical Engineering degree were introduction to programming courses. After successfully completing
+            those
+            courses, I wanted more!</p>
+          <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the field
+            of web development and the tech industry.</p>
         </div>
       </div>
-      <!-- End container --> 
-  </body>
+    </div>
+    <!-- End About me  -->
+  </div>
+  <!-- End container -->
+
+</body>
+
 </html>
