--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Begin Nav-bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand ml-3" href="index.html">Mostafa Alshammary</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,8 +28,8 @@
 
     <!-- Begin Contact form  -->
     <div class="container ml-4 mt-5">
-        <div class="card pl-4 pt-3" style="max-width: 800px;">
-            <h1>Portfolio</h1>
+        <div class="card pl-4 pt-3 bg-light" style="max-width: 800px;">
+            <h3>Portfolio</h3>
             <br><br>
             <!-- Row 1 -->
             <div class="row">
