--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       <div class="row ml-1 my-3">
         <div class="col-md-6">
           <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" class="card-img" style="max-width: 350px">
+          <br><br>
+          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/">LinkedIn</a>
+          <br>
+          <a href="https://github.com/Malsham3">GitHub</a>
         </div>
 
         <div class="col-md-6 pr-4">
