added buttons instead of hyperlinked text

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         <div class="col-md-6">
           <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" class="card-img" style="max-width: 350px">
           <br><br>
-          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/">LinkedIn</a>
-          <br>
-          <a href="https://github.com/Malsham3">GitHub</a>
+
+          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank" type="button" class="btn btn-secondary btn-sm">LinkedIn</a>
+
+          <a href="https://github.com/Malsham3" target="_blank" type="button" class="btn btn-secondary btn-sm">GitHub</a>
         </div>
 
         <div class="col-md-6 pr-4">
