adjustments per validation service

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <div class="form-group row">
           <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
           <div class="col-sm-10" style="max-width: 500px;">
-            <input class="form-control form-control-lg" id="colFormLabelLg" placeholder="Enter Your Email">
+            <input class="form-control form-control-lg" id="colFormLabelLg2" placeholder="Enter Your Email">
           </div>
         </div>
 
