--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
   <div class="container ml-4 mt-5">
     <div class="card bg-light" style="float:left; width:600px;">
       <!-- Begin About me -->
-      <div class="row my-2 ml-3">
+      <div class="row my-2 ml-4">
         <h3>About Me</h3>
       </div>
       <div class="row ml-1 my-3">
         <div class="col-md-6">
-          <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" class="card-img" style="max-width: 350px">
+          <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img" style="max-width: 350px">
           <br><br>
 
-          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank" type="button" class="btn btn-secondary btn-sm">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank" class="btn btn-secondary btn-sm">LinkedIn</a>
 
-          <a href="https://github.com/Malsham3" target="_blank" type="button" class="btn btn-secondary btn-sm">GitHub</a>
+          <a href="https://github.com/Malsham3" target="_blank" class="btn btn-secondary btn-sm">GitHub</a>
         </div>
 
         <div class="col-md-6 pr-4">
