--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+  <style>
+    .footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 60px;
+      line-height: 60px;
+      background-color: #f5f5f5;
+    }
+  </style>
+
   <!-- link in bootstrap stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
@@ -66,6 +77,12 @@
       </form>
     </div>
   </div>
+
+  <footer class="footer mt-auto">
+    <div class="container">
+      <span class="text-muted">Made with Love, by Me!</span>
+    </div>
+  </footer>
 </body>
 
 </html>
