--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <style>
     .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-}
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 60px;
+      line-height: 60px;
+      background-color: #f5f5f5;
+    }
   </style>
 
   <!-- link in bootstrap stylesheet -->
@@ -49,10 +49,12 @@
       </div>
       <div class="row ml-1 my-3">
         <div class="col-md-6">
-          <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img" style="max-width: 350px">
+          <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img"
+            style="max-width: 350px">
           <br><br>
 
-          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank" class="btn btn-secondary btn-sm">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
+            class="btn btn-secondary btn-sm">LinkedIn</a>
 
           <a href="https://github.com/Malsham3" target="_blank" class="btn btn-secondary btn-sm">GitHub</a>
         </div>
