--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            height: 60px;
+            line-height: 60px;
+            background-color: #f5f5f5;
+        }
+    </style>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 </head>
 
@@ -27,8 +39,8 @@
     <!-- End Nav-bar -->
 
     <!-- Begin Contact form  -->
-    <div class="container ml-4 mt-5">
-        <div class="card pl-4 pt-3 bg-light" style="max-width: 800px;">
+    <div class="container ml-4 my-5">
+        <div class="card pl-4 py-3 bg-light" style="max-width: 800px;">
             <h3>Portfolio</h3>
             <br><br>
             <!-- Row 1 -->
@@ -62,6 +74,11 @@
         </div>
     </div>
 
+    <footer class="footer mt-auto">
+        <div class="container">
+            <span class="text-muted">Made with Love, by Me!</span>
+        </div>
+    </footer>
 </body>
 
 </html>
