--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <style>
-    .footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      height: 60px;
-      line-height: 60px;
-      background-color: #f5f5f5;
-    }
-  </style>
+
 
   <!-- link in bootstrap stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -41,11 +34,12 @@
   <!-- End Nav-bar -->
 
   <!-- Begin Container -->
-  <div class="container ml-4 mt-5">
-    <div class="card bg-light" style="float:left; width:600px;">
+  <div class="container d-flex justify-content-center mt-5">
+    <div class="card bg-light">
       <!-- Begin About me -->
       <div class="row my-2 ml-4">
-        <h3>About Me</h3>
+        <h3>Hello, I'm Mostafa Alshammary.</h3>
+        <h3>I'm a future full stack web developer.</h3>
       </div>
       <div class="row ml-1 my-3">
         <div class="col-md-6">
@@ -54,9 +48,9 @@
           <br><br>
 
           <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
-            class="btn btn-secondary btn-sm">LinkedIn</a>
+            class="fa fa-linkedin fa-2x"></a>
 
-          <a href="https://github.com/Malsham3" target="_blank" class="btn btn-secondary btn-sm">GitHub</a>
+          <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
         </div>
 
         <div class="col-md-6 pr-4">
@@ -73,12 +67,6 @@
     <!-- End About me  -->
   </div>
   <!-- End container -->
-
-  <footer class="footer mt-auto">
-    <div class="container">
-      <span class="text-muted">Made with Love, by Me!</span>
-    </div>
-  </footer>
 </body>
 
 </html>
