--- a/index.html
+++ b/index.html
@@ -15,46 +15,30 @@
 </head>
 
 <body>
-
-  <!-- Begin Nav-bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <a class="navbar-brand ml-3" href="index.html">Mostafa Alshammary</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <!-- <a class="nav-link" href="contact.html">Contact</a>
         <a class="nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-link" href="index.html">About</a>
-      </div>
-    </div>
-  </nav>
-  <!-- End Nav-bar -->
+        <a class="nav-link" href="index.html">About</a> -->
+
 
   <!-- Begin Container -->
   <div class="container d-flex justify-content-center mt-5">
     <div class="card bg-light">
-      <!-- Begin About me -->
-      <div class="row my-2 ml-4">
+
+      <!-- Heading -->
+      <div class="row my-3 justify-content-center">
+        <div class = "col text-center">
         <h3>Hello, I'm Mostafa Alshammary.</h3>
         <h3>I'm a future full stack web developer.</h3>
       </div>
-      <div class="row ml-1 my-3">
-        <div class="col-md-6">
+
+      <div class="row ml-2 mr-2">
+        <div class="text-center col-md-6">
           <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img"
             style="max-width: 350px">
-          <br><br>
-
-          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
-            class="fa fa-linkedin fa-2x"></a>
-
-          <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
+          <br><br><br>
         </div>
 
-        <div class="col-md-6 pr-4">
-          <p>My name is Mostafa Alshammary, and I'm a future full-stack web developer!</p>
+        <div class="align-self-center text-center col-md-6">
           <p>I first became interested in coding when I was in college. A couple of the pre-requesites I had to take for
             my Mechanical Engineering degree were introduction to programming courses. After successfully completing
             those
@@ -62,6 +46,14 @@
           <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the field
             of web development and the tech industry.</p>
         </div>
+      </div>
+      
+      <div class="row my-3 justify-content-center">
+        <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
+          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
+            class="fa fa-linkedin fa-2x"></a>
+
+          <a href="mailto:m.alsham627@gmail.com" class = "fa fa-envelope fa-2x"></a>
       </div>
     </div>
     <!-- End About me  -->
