main page styling

--- a/index.html
+++ b/index.html
@@ -15,50 +15,61 @@
 </head>
 
 <body>
-        <!-- <a class="nav-link" href="contact.html">Contact</a>
+    <!-- Other pages if needed for future development -->
+  <!-- <a class="nav-link" href="contact.html">Contact</a>
         <a class="nav-link" href="portfolio.html">Portfolio</a>
         <a class="nav-link" href="index.html">About</a> -->
 
 
   <!-- Begin Container -->
   <div class="container d-flex justify-content-center mt-5">
-    <div class="card bg-light">
+    <div class="card">
 
       <!-- Heading -->
       <div class="row my-3 justify-content-center">
-        <div class = "col text-center">
-        <h3>Hello, I'm Mostafa Alshammary.</h3>
-        <h3>I'm a future full stack web developer.</h3>
-      </div>
-
-      <div class="row ml-2 mr-2">
-        <div class="text-center col-md-6">
-          <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img"
-            style="max-width: 350px">
-          <br><br><br>
+        <div class="col text-center">
+          <h3>Hello, I'm Mostafa Alshammary.</h3>
+          <h3>I'm a future full stack web developer.</h3>
         </div>
 
-        <div class="align-self-center text-center col-md-6">
-          <p>I first became interested in coding when I was in college. A couple of the pre-requesites I had to take for
-            my Mechanical Engineering degree were introduction to programming courses. After successfully completing
-            those
-            courses, I wanted more!</p>
-          <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the field
-            of web development and the tech industry.</p>
+        <!-- Image + Bio -->
+        <div class="row mt-3 ml-3 mr-3">
+
+          <!-- Image -->
+          <div class="text-center col-md-6">
+            <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img">
+            <br><br><br>
+          </div>
+
+          <!-- Bio -->
+          <div id="bio" class="align-self-center text-center col-md-6">
+            <p>I first became interested in coding when I was in college. A couple of the pre-requesites I had to take
+              for
+              my Mechanical Engineering degree were introduction to programming courses. After successfully completing
+              those
+              courses, I wanted more!</p>
+            <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the
+              field
+              of web development and the tech industry.</p>
+            <p>Below are some of </p>
+          </div>
         </div>
-      </div>
-      
-      <div class="row my-3 justify-content-center">
-        <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
+
+        <!-- Social-Media / Contact -->
+        <div class="row justify-content-center">
+          <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
           <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
             class="fa fa-linkedin fa-2x"></a>
 
-          <a href="mailto:m.alsham627@gmail.com" class = "fa fa-envelope fa-2x"></a>
+          <a href="mailto:m.alsham627@gmail.com" class="fa fa-envelope fa-2x"></a>
+
+          <a id="call-me" href="tel:623-363-5283" class="fa fa-phone fa-2x"></a>
+
+        </div>
       </div>
+      <!-- End About me  -->
     </div>
-    <!-- End About me  -->
-  </div>
-  <!-- End container -->
+    <!-- End container -->
 </body>
 
 </html>
