--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Main Page</title>
 
 
 
   <!-- link in bootstrap stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
-    <!-- Other pages if needed for future development -->
+  <!-- Other pages if needed for future development -->
   <!-- <a class="nav-link" href="contact.html">Contact</a>
         <a class="nav-link" href="portfolio.html">Portfolio</a>
         <a class="nav-link" href="index.html">About</a> -->
@@ -26,7 +27,7 @@
     <div class="card">
 
       <!-- Heading -->
-      <div class="row my-3 justify-content-center">
+      <div class="row mt-3 justify-content-center">
         <div class="col text-center">
           <h3>Hello, I'm Mostafa Alshammary.</h3>
           <h3>I'm a future full stack web developer.</h3>
@@ -37,7 +38,7 @@
 
           <!-- Image -->
           <div class="text-center col-md-6">
-            <img src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img">
+            <img id= "profile-pic" src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img">
             <br><br><br>
           </div>
 
@@ -51,23 +52,33 @@
             <p> I have been enjoying the University of Arizona Coding BootCamp and looking forward to working in the
               field
               of web development and the tech industry.</p>
-            <p>Below are some of </p>
           </div>
         </div>
+      </div>
 
-        <!-- Social-Media / Contact -->
-        <div class="row justify-content-center">
-          <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
-          <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
-            class="fa fa-linkedin fa-2x"></a>
+      <!-- Social-Media / Contact -->
+      <div class="row justify-content-center">
+        <a href="https://github.com/Malsham3" target="_blank" class="fa fa-github fa-2x"></a>
+        <a href="https://www.linkedin.com/in/mostafa-alshammary-22698a1b9/" target="_blank"
+          class="fa fa-linkedin fa-2x"></a>
 
-          <a href="mailto:m.alsham627@gmail.com" class="fa fa-envelope fa-2x"></a>
+        <a href="mailto:m.alsham627@gmail.com" class="fa fa-envelope fa-2x"></a>
 
-          <a id="call-me" href="tel:623-363-5283" class="fa fa-phone fa-2x"></a>
+        <a id="call-me" href="tel:623-363-5283" class="fa fa-phone fa-2x"></a>
+      </div>
 
+      <!-- Work and resume  -->
+      <div class = "row justify-content-center">
+        <div class="alert border-0" role="alert">
+
+          <!-- directs to Github projects / work page-->
+          <a href="work.html" class="alert-link">WORK</a> 
+          · 
+          <!-- Download Resume -->
+          <a href="#" class="alert-link">RESUME</a>
         </div>
       </div>
-      <!-- End About me  -->
+
     </div>
     <!-- End container -->
 </body>
