--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Begin Container -->
   <div class="container d-flex justify-content-center mt-5">
-    <div class="card">
+    <div id = "bio-card" class="card">
 
       <!-- Heading -->
       <div class="row mt-3 justify-content-center">
