--- a/work.html
+++ b/work.html
@@ -33,22 +33,35 @@
                 </div>
             </div>
 
-            <div id = "slide-show" class="row my-3 justify-content-center">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    </ol>
+            <div class="row mx-3 my-3 justify-content-center">
 
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img id = "slides" class="d-block" src="images/weather-dashboard-screenshot.png" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img id = "slides" class="d-block w-100" src="images/automate-screenshot.png" alt="Second slide">
-                        </div>
-                    </div>
+                <!-- Weather Dashboard -->
+                <div class="text-center col-md-6">
+                    <h5>
+                        <a href="https://github.com/Malsham3/weather-dashboard" target="_blank" class="repo">Weather Dashboard</a>
+                    </h5>
+                    <br>
+                    <a href = "https://malsham3.github.io/weather-dashboard/"  target="_blank" >
+                    <img src="images/weather-dashboard-screenshot.png" alt="Weather Dashboard" class="card-img">
+                    </a>
                 </div>
+
+                <!-- Automate -->
+                <div class="text-center col-md-6">
+                    <h5>
+                        <a href="https://github.com/Malsham3/auto-mate" target="_blank" class="repo">Automate</a>
+                    </h5>
+                    
+                    <br>
+                    <a href = "https://malsham3.github.io/auto-mate/"  target="_blank" >
+                    <img id="work" src="images/automate-screenshot.png" alt="Automate" class="card-img">
+                    </a>
+                </div>
+            </div>
+
+            <div class="row mx-3 my-3 alert-link">
+                <p>· Click on name to be directed to project's Github repository </p>
+                <p>· Click on image to be directed to project's deployed application</p>
             </div>
         </div>
 
