added downloadable resume

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
           <a href="work.html" class="alert-link">WORK</a> 
           · 
           <!-- Download Resume -->
-          <a href="#" class="alert-link">RESUME</a>
+          <a href="Resume.pdf" target="_blank" class="alert-link" download>RESUME</a>
+
         </div>
       </div>
 
@@ -84,3 +85,5 @@
 </body>
 
 </html>
+
+<!-- add downloadable resume  -->
