--- a/work.html
+++ b/work.html
@@ -38,11 +38,12 @@
                 <!-- Weather Dashboard -->
                 <div class="text-center col-md-6">
                     <h5>
-                        <a href="https://github.com/Malsham3/weather-dashboard" target="_blank" class="repo">Weather Dashboard</a>
+                        <a href="https://github.com/Malsham3/weather-dashboard" target="_blank" class="repo">Weather
+                            Dashboard</a>
                     </h5>
                     <br>
-                    <a href = "https://malsham3.github.io/weather-dashboard/"  target="_blank" >
-                    <img src="images/weather-dashboard-screenshot.png" alt="Weather Dashboard" class="card-img">
+                    <a href="https://malsham3.github.io/weather-dashboard/" target="_blank">
+                        <img src="images/weather-dashboard-screenshot.png" alt="Weather Dashboard" class="card-img">
                     </a>
                 </div>
 
@@ -51,22 +52,26 @@
                     <h5>
                         <a href="https://github.com/Malsham3/auto-mate" target="_blank" class="repo">Automate</a>
                     </h5>
-                    
+
                     <br>
-                    <a href = "https://malsham3.github.io/auto-mate/"  target="_blank" >
-                    <img id="work" src="images/automate-screenshot.png" alt="Automate" class="card-img">
+                    <a href="https://malsham3.github.io/auto-mate/" target="_blank">
+                        <img id="work" src="images/automate-screenshot.png" alt="Automate" class="card-img">
                     </a>
                 </div>
             </div>
 
             <div class="row mx-3 my-3 alert-link">
-                <p>· Click on name to be directed to project's Github repository </p>
-                <p>· Click on image to be directed to project's deployed application</p>
+                <div class="col">
+                    <p>· Click on name to be directed to project's Github repository </p>
+                    <p>· Click on image to be directed to project's deployed application</p>
+                </div>
             </div>
         </div>
-
     </div>
-
 </body>
 
 </html>
+
+
+<!-- Add back to main page button  -->
+<!-- Add Giphy's insteaad of screenshots -->
