added go back to main button inside of work page

--- a/work.html
+++ b/work.html
@@ -26,6 +26,13 @@
     <div class="container d-flex justify-content-center mt-5">
         <div class="card">
 
+            <!-- Go back to main page link -->
+            <div class="row mt-3 justify-content-center">
+                <div class="col">
+                    <a href="index.html" class="go-back ml-3">Go Back</a>
+                </div>
+            </div>
+            
             <!-- Heading -->
             <div class="row mt-3 justify-content-center">
                 <div class="col text-center">
@@ -35,11 +42,10 @@
 
             <div class="row mx-3 my-3 justify-content-center">
 
-                <!-- Weather Dashboard -->
+                <!-- Weather Dashboard section -->
                 <div class="text-center col-md-6">
                     <h5>
-                        <a href="https://github.com/Malsham3/weather-dashboard" target="_blank" class="repo">Weather
-                            Dashboard</a>
+                        <a href="https://github.com/Malsham3/weather-dashboard" target="_blank" class="repo">Weather Dashboard</a>
                     </h5>
                     <br>
                     <a href="https://malsham3.github.io/weather-dashboard/" target="_blank">
@@ -47,7 +53,7 @@
                     </a>
                 </div>
 
-                <!-- Automate -->
+                <!-- Automate section-->
                 <div class="text-center col-md-6">
                     <h5>
                         <a href="https://github.com/Malsham3/auto-mate" target="_blank" class="repo">Automate</a>
@@ -60,6 +66,7 @@
                 </div>
             </div>
 
+            <!-- guide instructions -->
             <div class="row mx-3 my-3 alert-link">
                 <div class="col">
                     <p>· Click on name to be directed to project's Github repository </p>
@@ -71,7 +78,3 @@
 </body>
 
 </html>
-
-
-<!-- Add back to main page button  -->
-<!-- Add Giphy's insteaad of screenshots -->
