--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
 </head>
 
 <body>
-  <!-- Other pages if needed for future development -->
-  <!-- <a class="nav-link" href="contact.html">Contact</a>
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-link" href="index.html">About</a> -->
-
 
   <!-- Begin Container -->
   <div class="container d-flex justify-content-center mt-5">
@@ -33,16 +28,16 @@
           <h3>I'm a future full stack web developer.</h3>
         </div>
 
-        <!-- Image + Bio -->
-        <div class="row mt-3 ml-3 mr-3">
+        <!-- Image + Bio row -->
+        <div class="row mt-3 mx-4">
 
-          <!-- Image -->
+          <!-- Image column -->
           <div class="text-center col-md-6">
             <img id= "profile-pic" src="https://i.ibb.co/g4xNt53/IMG-4431.jpg" alt="Profile Picture" class="card-img">
             <br><br><br>
           </div>
 
-          <!-- Bio -->
+          <!-- Bio column-->
           <div id="bio" class="align-self-center text-center col-md-6">
             <p>I first became interested in coding when I was in college. A couple of the pre-requesites I had to take
               for
@@ -85,5 +80,3 @@
 </body>
 
 </html>
-
-<!-- add downloadable resume  -->
