--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="work.html" class="alert-link">WORK</a> 
           · 
           <!-- Download Resume -->
-          <a href="Resume.pdf" target="_blank" class="alert-link" download>RESUME</a>
+          <a href="MostafaAlshammaryResume.pdf" target="_blank" class="alert-link" download>RESUME</a>
 
         </div>
       </div>
